--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "com.sparkjava:spark-core:2.7.2"
     compile group: 'org.sql2o', name: 'sql2o', version: '1.6.0-RC3'
     compile group: 'com.h2database', name: 'h2', version: '1.4.194'
+    compile "org.freemarker:freemarker:2.3.28"
+    compile "org.slf4j:slf4j-simple:1.7.21"
 
 }
